# Neural-Network

./: CMakeLists.txt  README.md
include/: mnist_loader.hpp  neural_net.hpp
src/: main.cpp  mnist_loader.cpp  neural_net.cpp
